<resources>
    <string name="app_name">TFG-AplicacionGastos</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_start">Inicio</string>
    <string name="menu_category">Categorías</string>
    <string name="menu_graphs">Gráficos</string>
    <string name="menu_habitualPayments">Pagos Habituales</string>
    <string name="menu_settings">Ajustes\n</string>
    <string name="Color">color</string>
    <string name="Add">Añadir Categoria</string>
    <string name="add_category">Añadir Categoria</string>
    <string name="name">Nombre</string>
    <string name="gastos">Gastos</string>
    <string name="ingresos">Ingresos</string>
    <string name="menu_account">Cuentas</string>
    <string name="total">Total</string>
    <string name="edit">Editar</string>
    <string name="delete">Eliminar</string>
    <string name="transfer">Transferencia</string>
    <string name="account_name">Nombre de la cuenta:</string>
    <string name="add_Account">Crear cuenta</string>
    <string name="error_empty_fields">Por favor, llena todos los campos.</string>
    <string name="account_created">Cuenta creada con éxito</string>
    <string name="account_updated">Cuenta actualizada con éxito</string>
    <string name="account_deleted">Cuenta eliminada con éxito</string>
    <string name="confirm_delete_account_title">Eliminar Cuenta</string>
    <string name="confirm_delete_account_message">¿Esta seguro que desea eliminar esta cuenta?</string>
    <string name="cancel">Cancelar</string>
    <string name="confirm_delete_category_title">Confirmar eliminación</string>
    <string name="confirm_delete_category_message">¿Estás seguro de que deseas eliminar esta categoría?</string>
    <string name="category_deleted">Categoría eliminada</string>
    <string name="category_updated">Categoria actualizada</string>
    <string name="category_created">Categoria creada</string>
    <string name="category_name">Nombre Categoria</string>
    <string name="gastosingresos">Gastos/Ingresos\n</string>
    <string name="cannot_delete_selected_account">No puedes eliminar la cuenta seleccionada</string>
    <string name="Exchange_name">Nombre gasto/Ingreso\n</string>
    <string name="Add_exchange">Añadir Gasto/Ingreso</string>
    <string name="select_date">Selecciona fecha\n</string>
    <string name="confirm_delete_exchange_title">Eliminar Gasto/Ingreso</string>
    <string name="confirm_delete_exchange_message">¿Estas seguro que quiere eliminar este Gasto/Ingreso?</string>
    <string name="day">Hoy</string>
    <string name="week">Semana\n</string>
    <string name="month">Mes\n</string>
    <string name="year">Año\n</string>
    <string name="categories">Categorias</string>
    <string name="period">Periodo</string>
    <string name="types">Tipos</string>
    <string name="crear_cuenta">Crear cuenta</string>
    <string name="select_category">Selecciona una categoria</string>
    <string name="quantity_no_valid">Cantidad inválida.</string>
    <string name="selected_tick">selectedTick</string>
</resources>