<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name" />

    <EditText
        android:id="@+id/exchangeNameEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/Exchange_name"
        android:minHeight="48dp" />


    <RadioGroup
        android:id="@+id/radioButtonGroupExchangeType"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/radioButtonGastos"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/gastos" />

        <RadioButton
            android:id="@+id/radioButtonIngresos"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ingresos" />
    </RadioGroup>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/CategoryRecycler"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"/>


        </ScrollView>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="20dp">

            <EditText
                android:id="@+id/exchangeDateEditText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/select_date"
                android:focusable="false"
                android:clickable="true"
                android:minHeight="48dp"/>

            <Button
                android:id="@+id/datePickerButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src = "@drawable/calendar"
                android:text="@string/select_date"/>
        </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/total" />

            <EditText
                android:id="@+id/totalAmountEditText"
                android:layout_width="200dp"
                android:layout_height="wrap_content"

                android:hint="@string/total"
                android:inputType="numberDecimal" />

        <Button
            android:id="@+id/createExchangeButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Add_exchange" />

    </LinearLayout>
</FrameLayout>