<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    app:cardCornerRadius="15dp"
    app:cardElevation="6dp"
    app:cardBackgroundColor="@color/cardview_dark_background">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <!-- Nombre de la cuenta -->
        <TextView
            android:id="@+id/accountName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Nombre de la cuenta"
            android:textSize="18sp"
            android:textColor="@color/cardview_light_background"
            android:textStyle="bold"
            android:layout_marginBottom="8dp"/>

        <!-- Total de la cuenta -->
        <TextView
            android:id="@+id/accountTotal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/total"
            android:textSize="16sp"
            android:textColor="@color/cardview_light_background"
            android:layout_marginBottom="8dp"/>

        <!-- Botones de acción -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="end">

            <Button
                android:id="@+id/editAccountButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/edit"
                android:textSize="14sp"
                android:layout_marginEnd="8dp"
                android:backgroundTint="@color/black"
                android:textColor="@color/white"/>

            <Button
                android:id="@+id/deleteAccountButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/delete"
                android:textSize="14sp"
                android:backgroundTint="@color/black"
                android:textColor="@color/white"/>
        </LinearLayout>
    </LinearLayout>
</androidx.cardview.widget.CardView>